Fixed alignment of some registration fields.

--- a/source/components/inputField/inputField.scss
+++ b/source/components/inputField/inputField.scss
@@ -71,6 +71,7 @@ $select-underline-color:  #97c88c;
     line-height: normal;
     letter-spacing: normal;
     font-size: 15px;
+    margin-left: 0; !important 
   }
 
   .dropdown {
